Changed BGPUpdate to store paths more intelligently.  Also now uses JTrove's list impl.